@@ -7,6 +7,7 @@ zlim (argument to plot) did not function properly when used to extend the values
 writeRaster now honours the value of the NAvalue argument when writing a ncdf file (requested by Thiago Veloso)
 added support for the ncdf4 library
 fixed many spelling mistakes in the documentation reported by Phil Heilman
+function fourCellsFromXY is now visible.
 
 --- 27-June-2012, version 2.0-08
 bug fixes (both introduced in version 2.0-04):
